updated simple files fixing 2nd server access